[package]
name = "blas_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "blas_rs"
path = "src/lib.rs"

[[bin]]
name = "bencher"
path = "bench/bencher.rs"

[[bin]]
name = "asm_runner"
path = "asm/runner.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
# rayon = "1.12.0" # for parallel computations
fastrand = "2.4.1" # utils for random generation
# cblas = "0.5.0" # benchmarking against cblas